add the 3d model musca-domestica and change properties scene

--- a/logo.html
+++ b/logo.html
@@ -3,19 +3,17 @@
 
 <head>
 	<meta charset="utf-8">
+	<link rel="stylesheet" href="./logo.css">
 	<title>My first logo 3d</title>
-	<style>
-		body {
-			margin: 0;
-		}
-	</style>
 </head>
 
 <body>
+	<canvas id="c"></canvas>
 	<script type="importmap">
 		{
 			"imports": {
-				"three": "https://cdn.jsdelivr.net/npm/three/build/three.module.js"
+				"three": "https://cdn.jsdelivr.net/npm/three/build/three.module.js",
+				"three/addons/": "https://cdn.jsdelivr.net/npm/three/examples/jsm/"
 			}
 		}
 		</script>
